Fix iframe layout issue on iOS

--- a/system/application/views/widgets/mediaelement/mediaelement.css
+++ b/system/application/views/widgets/mediaelement/mediaelement.css
@@ -38,6 +38,7 @@
 
 .mediaObject {
 	z-index:7;
+	overflow: hidden; /* prevents iframes from exceeding bounds on iOS */
 }
 
 .mediaelement pre { border: 1px solid #cbcbcb; }
